--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
         </h1>
     </div>
+    <div>
+        <h2>lorem </h2>
+        <p> rania </p>
+    </div>
      <div>
        
         <h1> Aya </h1>
     </div>
-    <div>
-        <h2>lorem </h2>
-        <h1> rania </h1>
-    </div>
+    
 </body>
 </html>
